objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Cantidad__c</fullName>
        <label>Cantidad</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Codigo_SAP__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Codigo SAP</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISBN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ISBN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Macaron_Flavor__c</fullName>
        <defaultValue>CASE(MONTH(TODAY()),1, &quot;Gingerbread&quot;,2, &quot;Strawberry&quot;,4, &quot;Chocolate&quot;,7, &quot;Raspberry&quot;,11, &quot;Pumpkin&quot;,12, &quot;Mint&quot;, &quot;Vanilla&quot;)</defaultValue>
        <label>Macaron Flavor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flavors</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shirt__c</fullName>
        <label>Shirt</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Flavors</valueSetName>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>